fixes (?) text wrapping

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 .info-text-show-chat {
   padding-top: 100px;
   text-align: center;
-  overflow: auto;
 }
 
 #secret {
@@ -37,8 +36,10 @@ body {
 }
 
 #rocket {
-  height: 100%;
+  height: 90%;
   border: none;
+  right: 0;
+  width: 40%;
 }
 
 #chat {
